# mimic-cross

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  deno.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yaml  mimic.yaml
doc/: custom.md
docker/: arm64-bionic.dockerfile  arm64-focal.dockerfile  arm64-jammy.dockerfile  base.dockerfile  build.ts  download_deno.sh  lint.dockerfile
docs/: apt-get.md  python3.md
example/: Dockerfile  binutils.dockerfile
host/: setup.sh
mimic-arg/: build_gcc.zig  gcc.zig
mimic-cross.deno/: deno.json  setup.sh
mimic-cross.deno/apt/: apt.test.ts  apt.ts  custom_recipes.test.ts  helper.ts  load.ts  package.ts  package_info.ts
mimic-cross.deno/apt/builtin/: recipes.ts  supported.json
mimic-cross.deno/apt/custom/: recipes.ts
mimic-cross.deno/config/: config.test.ts  config.ts
mimic-cross.deno/mimic-arg.zig/: build_clang.zig  build_gcc.zig  clang.zig  gcc.zig
mimic-cross.deno/python/: save_config_vars.py  sysconfig.patch
mimic-cross.deno/src/: args.test.ts  args.ts  chroot.ts  deploy.test.ts  deploy.ts  gcc.test.ts  gcc.ts  log.ts  mimicx.ts  python.test.ts  python.ts  setup.ts  util.test.ts  util.ts
mimic-cross.deno/test/: Dockerfile  util.ts
mimic-lib/: CMakeLists.txt  build.zig  mimic_lib.zig  mimic_libc.c
script/: build.ts  launch_docker.sh  lint.sh  lint.ts  lint_in_docker.sh
test/: Dockerfile  hello.c  main.c
test/custom/: recipes.ts  supported.json
